@@ -1,0 +1,9 @@
+// DESCRIPTION: Verilator: Verilog Test module
+//
+// This file ONLY is placed under the Creative Commons Public Domain, for
+// any use, without warranty, 2024 by Ethan Sifferman.
+// SPDX-License-Identifier: CC0-1.0
+
+`verilator_config
+
+lint_off -file "*/t_vlt_match_error.v" -match "*"
